# MLOps-for-Text-Classification

./: .dvcignore  .gitignore  .replit  PROJECT_GUIDE.md  README.md  create_tables.py  dvc.yaml  main.py  models.py  pyproject.toml  requirements-guide.txt  spam.csv
.config/iterative/: telemetry
app/: __init__.py
app/api/: __init__.py  dataset_routes.py  model_routes.py  preprocessing_routes.py  visualization_routes.py
app/models/: database.py
app/templates/: datasets.html  index.html  layout.html  preprocessing.html
app/utils/: config.py  database.py  dvc_handler.py  feature_extraction.py  text_preprocessing.py
attached_assets/: Fake - Copy.csv  Pasted-1-R-partition-des-T-ches-Chaque-membre-peut-se-concentrer-sur-un-module-sp-cifique-du-projet-MLOps-1746233122704.txt  Pasted-CAHIER-DES-CHARGES-PROJET-MLOPS-POUR-LA-CLASSIFICATION-DE-TEXTE-1-CONTEXTE-ET-OBJECTIFS--1746233022309.txt  True - Copy.csv
config/: config.yaml
dvc_helpers/: __init__.py  dvc_setup.py  remote_storage.py
notebooks/: data_preprocessing_exploration.ipynb  dvc_exploration.ipynb
scripts/: setup.py
src/: __init__.py  config.py
src/data/: __init__.py  data_loader.py  data_validator.py  preprocessing.py
src/utils/: __init__.py  decorators.py  logging_utils.py
static/css/: styles.css
static/js/: main.js
templates/: index.html  layout.html
tests/: __init__.py  test_data_loader.py  test_data_validator.py  test_preprocessing.py
